Fixed a wrong variable name

--- a/SL-proto-type.ipynb
+++ b/SL-proto-type.ipynb
@@ -9,20 +9,20 @@
     "import yfinance as yf\n",
     "import pandas \n",
     "from datetime import datetime\n",
-    "from iexfinance.stocks import Stock\n"
+    "from iexfinance.stocks import Stock"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Price of ticker MSFT : 213.49\n",
-      "Percentage Change MSFT over 15m : %-0.59\n"
+      "Price of ticker MSFT : 226.94\n",
+      "Percentage Change MSFT over 15m : %-0.48\n"
      ]
     }
    ],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -64,8 +64,8 @@
      "output_type": "stream",
      "text": [
       "Apple ticker:  AAPL\n",
-      "Apple Stock Price:  127.46\n",
-      "Apple 1 month change: % -5.14\n"
+      "Apple Stock Price:  139.84\n",
+      "Apple 1 month change: % 4.16\n"
      ]
     }
    ],
@@ -97,15 +97,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current Price of AMZN: 3145.41 \n",
-      "P1 Open trade: Price Opened: 3145.41, Position Opened True\n"
+      "Current Price of AMZN: 3302.01 \n",
+      "P1 Open trade: Price Opened: 3302.01, Position Opened True\n"
      ]
     }
    ],
@@ -159,7 +159,7 @@
     "amzn = Stock(\"AMZN\")\n",
     "p1 = Position(amzn)\n",
     "p1.open_trade()\n",
-    "print(\"Current Price of {0}: {1} \".format( mfst.get_ticker_name(), mfst.get_price()))\n",
+    "print(\"Current Price of {0}: {1} \".format(amzn.get_ticker_name(), amzn.get_price()))\n",
     "print(\"P1 Open trade: Price Opened: {0}, Position Opened {1}\".format(p1.open_price, p1.trade_opened))\n"
    ]
   },
